# quantumtt

./: .gitignore  README.md
task_1/: README.md  dataset.ipynb  demo.ipynb  inference.py  pyproject.toml  requirements.txt  test.ndjson  train.ndjson  train.py
task_2/: README.md  inference.py  pyproject.toml  utils.py
