[tool.poetry]
name = "quantumtt"
version = "0.1.0"
description = ""
authors = ["skorodenko <skorodenkom@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
ipykernel = "^6.29.5"
polars = "^1.19.0"
ollama = "^0.4.5"
tqdm = "^4.67.1"
matplotlib = "^3.10.0"
transformers = {extras = ["torch"], version = "^4.48.0"}
torch = "^2.5.1"
nltk = "^3.9.1"
datasets = "^3.2.0"
seqeval = "^1.2.2"
evaluate = "^0.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
