[tool.poetry]
name = "task-2"
version = "0.1.0"
description = ""
authors = ["skorodenko <skorodenkom@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10,<3.13"
rasterio = "^1.4.3"
ipykernel = "^6.29.5"
kornia = "^0.8.0"
kornia-moons = "^0.2.9"
torchvision = "^0.20.1"
opencv-python = "^4.10.0.84"
pyqt6 = "^6.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
